# test-rust

./: Cargo.toml  remote.sh  setup.sh
src/: main.rs
