[package]
name = "test"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
rand = "0.8.5"
crossbeam = "0.8.3"
generational-arena = { version = "0.2.9", features = ["serde"] }
parking_lot = { version = "0.12.1", features = ["arc_lock", "deadlock_detection", "hardware-lock-elision", "nightly", "owning_ref", "serde"] }

[dependencies.futures]
version = "0.3"
default-features = false
features = ["async-await"]

